{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 33,
  "lineage": "2b19c0c8-159a-589e-18bc-6536392cbbee",
  "resources": [
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "machine1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f706d959cedf892",
            "arn": "arn:aws:ec2:us-east-2:971100554701:instance/i-025b77d4f8fa28c57",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-025b77d4f8fa28c57",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee9161cc1d460173",
            "private_dns": "ip-10-0-1-207.us-east-2.compute.internal",
            "private_ip": "10.0.1.207",
            "public_ip": "3.15.34.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-074fe0756253bdc77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014b99947d0710af6",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c74f885730ec98e0"
            ]
          },
          "depends_on": [
            "aws_security_group.mysg",
            "aws_subnet.pubsubnet"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e22006ab2089c1d3",
            "owner_id": "971100554701",
            "vpc_id": "vpc-0a943cb2351f3a590"
          },
          "depends_on": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b2a2d98a1704ec92",
            "owner_id": "971100554701",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e22006ab2089c1d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0a943cb2351f3a590"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085c3107ec0c4913",
            "route_table_id": "rtb-0b2a2d98a1704ec92",
            "subnet_id": "subnet-014b99947d0710af6"
          },
          "depends_on": [
            "aws_route_table.publicrt",
            "aws_subnet.pubsubnet"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971100554701:security-group/sg-0c74f885730ec98e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c74f885730ec98e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190812074013367200000001",
            "name_prefix": null,
            "owner_id": "971100554701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a943cb2351f3a590"
          },
          "depends_on": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971100554701:subnet/subnet-014b99947d0710af6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-014b99947d0710af6",
            "map_public_ip_on_launch": true,
            "owner_id": "971100554701",
            "tags": {
              "Name": "testsubnetpublic"
            },
            "vpc_id": "vpc-0a943cb2351f3a590"
          },
          "depends_on": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvtsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971100554701:subnet/subnet-0625586776610bfab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0625586776610bfab",
            "map_public_ip_on_launch": false,
            "owner_id": "971100554701",
            "tags": {
              "Name": "testsubnetprivate"
            },
            "vpc_id": "vpc-0a943cb2351f3a590"
          },
          "depends_on": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971100554701:vpc/vpc-0a943cb2351f3a590",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0894a411f998f9e8a",
            "default_route_table_id": "rtb-07d5252a86d853ed8",
            "default_security_group_id": "sg-0ebc7cbf37d06faef",
            "dhcp_options_id": "dopt-3967a752",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a943cb2351f3a590",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07d5252a86d853ed8",
            "owner_id": "971100554701",
            "tags": {
              "Name": "testvpc"
            }
          }
        }
      ]
    }
  ]
}